base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: color
  name: color
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      serviceAccountName: color-detection
      securityContext:
        runAsGroup: 0
      containers:
      - image: ghcr.io/teojp3/jpt-color-detection
        name: color-detection
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - mountPath: /dev/video0
          name: video
        securityContext:
          privileged: true
        resources: {}
      volumes:
      - name: video
        hostPath:
          path: /dev/video0
status: {}
