base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: color
  name: color
  namespace: demo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: color
status:
  loadBalancer: {}
