base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: color
  name: color
  namespace: demo
spec:
  port:
    targetPort: 8080
  to:
    name: color
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
status: {}
